--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-hook-form": "^7.66.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0",
-    "xlsx": "^0.18.5",
+    "@e965/xlsx": "^0.20.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
